--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
  Text Domain:  alexcastrotheme
+ GitHub Theme URI: https: //github.com/zipmegabyte/alexcastrotheme
 */
